--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Outfit', sans-serif;
+    overflow-x: hidden;
 }
 
 html {
@@ -41,6 +42,10 @@ h1 > span {
     width: 1100px;
     max-width: 95%;
     margin-top: 4rem;
+}
+
+#world_connected {
+    max-width: 90%;
 }
 
 /* From cssbuttons.io by @westitan */
@@ -251,6 +256,7 @@ top: -120px;
     position: relative;
     color: #333 !important;
     width: 600px;
+    max-width: 95%;
     left: 50%;
     transform: translateX(-50%);
 }
