--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 
 :root {
-    --ligth-lue: #E4FBFF;
+    --ligth-blue: #E4FBFF;
     --gray: #B8B5FF;
     --violet: #7868E6; 
     --ligth-gray: #EDEEF7;
@@ -16,6 +16,10 @@
 
 html {
     scroll-behavior: smooth;
+}
+
+button {
+    cursor: pointer;
 }
 
 body {
@@ -48,77 +52,6 @@ h1 > span {
     max-width: 90%;
 }
 
-/* From cssbuttons.io by @westitan */
-button {
-    position: relative;
-    padding: 19px 36px;
-    display: block;
-    text-decoration: none;
-    text-transform: uppercase;
-    overflow: hidden;
-    border-radius: 40px;
-    border: none;
-    cursor: pointer;
-}
-
-button span {
-position: relative;
-color: #fff;
-font-family: Arial;
-letter-spacing: 8px;
-z-index: 1;
-}
-
-button .liquid {
-position: absolute;
-top: -80px;
-left: 0;
-width: 100%;
-height: 200px;
-background: var(--violet);
-box-shadow: inset 0 0 50px rgba(0, 0, 0, .5);
-transition: .5s;
-}
-
-button .liquid::after,
-button .liquid::before {
-content: '';
-width: 200%;
-height: 200%;
-position: absolute;
-top: 0;
-left: 50%;
-transform: translate(-50%, -75%);
-background: #fff;
-}
-
-button .liquid::before {
-border-radius: 45%;
-background: rgba(20, 20, 20, 1);
-animation: animate 5s linear infinite;
-}
-
-button .liquid::after {
-border-radius: 40%;
-background: rgba(20, 20, 20, .5);
-animation: animate 10s linear infinite;
-}
-
-button:hover .liquid {
-top: -120px;
-}
-
-@keyframes animate {
-0% {
-    transform: translate(-50%, -75%) rotate(0deg);
-}
-
-100% {
-    transform: translate(-50%, -75%) rotate(360deg);
-}
-}
-
-/*  */
 
 .front-page {
     display: flex;
@@ -288,15 +221,14 @@ top: -120px;
     left: 0;
     display: block;
     border-radius: 50px;
-    background: #b1dae7;
+    background: var(--violet);
     width: 45px;
     height: 45px;
     transition: all 0.3s ease;
    }
    
-   .cta span a {
+   .cta span  {
     position: relative;
-    font-family: "Ubuntu", sans-serif;
     font-size: 18px;
     font-weight: 700;
     letter-spacing: 0.05em;
@@ -319,7 +251,7 @@ top: -120px;
    
    .cta:hover:before {
     width: 100%;
-    background: #b1dae7;
+    background: var(--ligth-blue);
    }
    
    .cta:hover svg {
@@ -329,6 +261,7 @@ top: -120px;
    .cta:active {
     transform: scale(0.95);
    }
+
 
 @media screen and (max-width: 1190px) {
 
